[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-lib"  # Check PyPI if this name is available
version = "0.1.0"
description = "Fundamental constants and utilities for human-centric computational systems."
readme = "README.md"
authors = [{name = "Technomouse", email = "your-email@example.com"}]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/nzink777/Axiom"
