[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-nexus" 
version = "0.1.0"
description = "Fundamental constants and utilities for human-centric computational systems."
readme = "README.md"
authors = [{name = "Technomouse Developer"}]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/nzink777/Axiom"

[tool.setuptools]
packages = ["axiom"]
